--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.1.0",
     "@contentful/rich-text-types": "^17.1.0",
+    "@vercel/analytics": "^1.5.0",
     "contentful": "^11.7.15",
     "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
